AntonPutra/Istio/example-3/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    monitoring: prometheus
    istio-injection: enabled # istio sidecar enabled
