AntonPutra/Istio/example-3/02_deployment_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
  namespace: production 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v1
  template:
    metadata:
      labels:
        app: first-app
        version: v1     # application version for canary
        istio: monitor  #for istio 
    spec:
      containers:
      - name: first-app
        image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http
