AntonPutra/Istio/example-3/03_deployment_v2.yaml
---
apiVersion: apps/v2
kind: Deployment
metadata:
  name: first-app
  namespace: production 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-app
      version: v2
  template:
    metadata:
      labels:
        app: first-app
        version: v2     # application version for canary
        istio: monitor  #for istio 
    spec:
      containers:
      - name: first-app
        image: aputra/myapp-lesson155:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: http
