AntonPutra/Istio/example-3/04_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: production
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: first-app # it randomly route the traffic both version v1 and v2
