AntonPutra/Istio/example-3/07_gateway_finale.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector: 
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http
      hosts:
        - app.vishnuthejabhadri.xyz
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - app.vishnuthejabhadri.xyz
      tls:
        credentialName: api-vishnuthejabhadri-xyz-crt
        mode: SIMPLE
